--- a/src/server/website/Consulta.html
+++ b/src/server/website/Consulta.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/AdminOptions.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -10,13 +10,13 @@
     </head>
     <body>
         <section class= "form-adminOpts">
-            <h5>Consultas de Administrador</h5>
+            <h5>Más opciones</h5>
             <input class="buttons" type="submit" id="propiedadPropietario" value="Propiedades de Propietario" onclick="propPropi();">
-            <input class="buttons" type="submit" id="propietarioPropiedad" value="Propietario de Propiedad" onclick="propietarioProp();">
-            <input class="buttons" type="submit" id="propVisible" value="Propiedades Visibles" onclick="propVisible();">
+            <input class="buttons" type="submit" id="propietarioPropiedad" value="Propietarios de Propiedad" onclick="propietarioProp();">
+            <input class="buttons" type="submit" id="propVisible" value="Propiedades de Usuario" onclick="propVisible();">
             <input class="buttons" type="submit" id="usuarioPropiedad" value="Usuarios de Propiedad" onclick="userProp();">
+            <input class="buttons" type="submit" id="arregloPagoPropiedad" value="Plan de Arreglo de Pago" onclick="apProp();">
             <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
         </section>
-
     </body>
 </html>
