--- a/src/server/website/EventLog.html
+++ b/src/server/website/EventLog.html
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
       <p style="color:#FFFFFF; text-align: center;">
-        <b>Listado de Personas</b><br>
+        <b>Historial</b><br>
       </p>
     </section>
   </div>
@@ -53,28 +53,15 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Evento</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Entidad</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">ID de identidad</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Historial</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Actualización</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Autor</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Ip</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Evento</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Entidad</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">ID de Entidad</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Historial</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Actualización</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Autor</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">IP</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
       </tr>
-      <!--
-      <tr class="linea" id="1">
-        <td>Erick</td>
-        <td>1123456</td>
-        <td>Nacional</td>
-        <td>71086099</td>
-        <td>88157623</td>
-        <td>correo@lineacaliente.es</td>
-        <td>
-            <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Erick',1123456,'Nacional',71086099,88157623,'correo@lineacaliente.es');">
-            <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
-        </td>
-      </tr>-->
       <tbody id="tableBody"></tbody>
     </table>
   </div>
