--- a/src/server/website/PerXPropEdit.html
+++ b/src/server/website/PerXPropEdit.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/PerXProp.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,9 +11,9 @@
     <body>
         <section class= "form-usuario">
             <h5>Persona y Propiedad</h5>
-            Numero de Identificación
+            Identificación de Persona
             <select class="controls" name="nombre" id="nombre"><option value="tipo">Identificacion</option></select>
-            Numero de Lote
+            Lote de Propiedad
             <select class="controls" name="lote" id="lote"><option value="tipo">Lote</option></select>
             Fecha de Registro
             <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
@@ -22,6 +22,5 @@
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
-
     </body>
 </html>
