--- a/src/server/website/PersonaEdit.html
+++ b/src/server/website/PersonaEdit.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/Persona.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,11 +15,11 @@
             <input class="controls" type="text" id="name" value="" placeholder="Nombre">
             Tipo de Identificación
             <select class="controls" name="TipoID" id="TipoID"><option value="tipo">Tipo Identificacion</option></select>
-            Numero de identificacion
+            Número de identificacion
             <input class="controls" type="number" id="idNumber" value="" placeholder="Numero de Itentificación">
-            Número de telefono 1
+            Número de Teléfono 1
             <input class="controls" type="number" id="phone1" value="" placeholder="Número de telefono 1">
-            Número de telefono 2
+            Número de Teléfono 2
             <input class="controls" type="number" id="phone2" value="" placeholder="Número de telefono 2">
             Correo Electrónico
             <input class="controls" type="email" id="email" value="" placeholder="Correo Electrónico">
