--- a/src/server/website/listaMediciones.html
+++ b/src/server/website/listaMediciones.html
@@ -29,16 +29,10 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">ID propiedad</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Movimiento</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lectura</th>
-      </tr>
-      <tr class="linea" id=1>
-        <td>21</td>
-        <td>2</td>
-        <td>2022-09-30</td>
-        <td>310</td>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Movimiento</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Consumo</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Saldo</th>
       </tr>
       <tbody id="tableBody"></tbody>
     </table>
