--- a/src/server/website/listaUsuarios.html
+++ b/src/server/website/listaUsuarios.html
@@ -40,23 +40,11 @@
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
 
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Usuario</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operaciones</th>
-      <!--
-        <tr class="linea" id="1">
-        <td>Vale</td>
-        <td>Lacrack</td>
-        <td>contrasena</td>
-        <td>Regular</td>
-        <td>
-          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Vale','Lacrack','contrasena','Regular');">
-          <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
-        </td>
-      </tr>
-      -->
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Persona</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Usuario</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operaciones</th>
       <tbody id="tableBody"></tbody>
     </table>
   </div>
