--- a/src/server/website/propPropi.html
+++ b/src/server/website/propPropi.html
@@ -31,44 +31,24 @@
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <section class="filt" style="padding-left: 1em;">
-      <input class="controls" type="number" id="cant" min='1' value="" placeholder="IDENTIFICACION">
-      <input class="buttons" type="submit" id="catBtn" value=" Filtrar por Identificación " onclick="ident();">
+      <input class="controls" type="number" id="cant" min='1' value="" placeholder="Identificación de Persona">
+      <input class="buttons" type="submit" id="catBtn" value="Mostrar propiedades" onclick="ident();">
     </section>
-
   </div>
-
   <br>
   <br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Uso</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Zona</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Área</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor fiscal</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha Registro</th>
-      </tr>
-      
-      <tbody id="tableBody"></tbody>
-    </table>
-    <!--
-    <table id="tablaItems" style="border: 2px solid #017bab;">
-      <tr>
-
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Usuario</th>
-      <tr class="linea" id="1">
-        <td>Erick</td>
-        <td>Pedrito</td>
-        <td>contrasena</td>
-        <td>Regular</td>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Uso</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Zona</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Territorio</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor Fiscal</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Registro</th>
       </tr>
       <tbody id="tableBody"></tbody>
     </table>
-  -->
   </div>
   <br>
   <br>
