--- a/src/server/website/Persona.html
+++ b/src/server/website/Persona.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/Persona.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,21 +14,19 @@
             Nombre
             <input class="controls" type="text" id="name" value="" placeholder="Nombre">
             Tipo de Identificación
-            <select class="controls" name="TipoID" id="TipoID"><option value="tipo">Tipo Identificacion</option></select>
-            Numero de identificacion
-            <input class="controls" type="number" id="idNumber" value="" placeholder="Numero de Itentificación">
-            Número de telefono 1
-            <input class="controls" type="number" id="phone1" value="" placeholder="Número de telefono 1">
-            Número de telefono 2
-            <input class="controls" type="number" id="phone2" value="" placeholder="Número de telefono 2">
+            <select class="controls" name="TipoID" id="TipoID"><option value="tipo">Tipo de Identificación</option></select>
+            Número de Identificación
+            <input class="controls" type="number" id="idNumber" value="" placeholder="Numero de Identificación">
+            Número de Teléfono 1
+            <input class="controls" type="number" id="phone1" value="" placeholder="Número de Teléfono 1">
+            Número de Teléfono 2
+            <input class="controls" type="number" id="phone2" value="" placeholder="Número de Teléfono 2">
             Correo Electrónico
             <input class="controls" type="email" id="email" value="" placeholder="Correo Electrónico">
             <section>
               <input class="buttons" type="submit" id="addBtn" value="Agregar Persona" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
-
         </section>
-
     </body>
 </html>
