--- a/src/server/website/Propiedades.html
+++ b/src/server/website/Propiedades.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/Propiedades.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,18 +11,18 @@
     <body>
         <section class= "form-Propiedades">
             <h5>Propiedades</h5>
-            Tipo de Propiedad
-            <select class="controls" name="idType" id="idType"><option value="tipo">Tipo de Propiedad</option></select>
-             Tipo de Zona
+            Uso de Propiedad
+            <select class="controls" name="idType" id="idType"><option value="tipo">Tipo de Uso</option></select>
+            Zona de Propiedad
             <select class="controls" name="idZone" id="idZone"><option value="tipo">Tipo de Zona</option></select>
-            Número de Lote
+            Lote
             <input class="controls" type="number" id="lote" value="" placeholder="Número de Lote">
-            Número de Medidor
+            Medidor
             <input class="controls" type="number" id="medidor" value="" placeholder="Número de medidor">
-            Metros cuadrados
-            <input class="controls" type="number" id="squareM" value="" placeholder="Metros cuadrados">
-            Valor de la propiedad
-            <input class="controls" type="number" id="price" value="" placeholder="Valor de la propiedad" step="any">
+            Metros Cuadrados
+            <input class="controls" type="number" id="squareM" value="" placeholder="Metros Cuadrados">
+            Valor Fiscal
+            <input class="controls" type="number" id="price" value="" placeholder="Valor Fiscal de Propiedad" step="any">
             Fecha de Registro
             <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
             <section>
