--- a/src/server/website/PropietarioDePropiedades.html
+++ b/src/server/website/PropietarioDePropiedades.html
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
       <p style="color:#FFFFFF; text-align: center;">
-        <b> Propiedades de Propietario</b><br>
+        <b>Propietarios de Propiedad</b><br>
       </p>
     </section>
   </div>
@@ -34,8 +34,8 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
 
     <section class="filt">
-      <input class="controls" type="number" id="finca" value="" placeholder="Numero de Finca">
-      <input class="buttons" type="submit" id="descBtn" value=" Filtrar Numero de Finca " onclick="finca();">
+      <input class="controls" type="number" id="finca" value="" placeholder="Lote de Propiedad">
+      <input class="buttons" type="submit" id="descBtn" value="Mostrar propietarios" onclick="finca();">
     </section>
 
 
@@ -47,14 +47,13 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono 2</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Email</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Identificación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Teléfono 1</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Teléfono 2</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Correo Electrónico</th>
       </tr>
-      
       <tbody id="tableBody"></tbody>
     </table>
   </div>
