--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/Usuario.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,11 +11,10 @@
     <body>
         <section class= "form-usuario">
             <h5>Usuario</h5>
-            Identificación
+            Identificación de Persona
             <select class="controls" name="ident" id="ident"><option value="Identificacion">Identificación</option></select>
-            Nombre de Usuario
-            <input class="controls" type="text" id="user" value="" placeholder="Nombre de Usuario">
-
+            Username
+            <input class="controls" type="text" id="user" value="" placeholder="Username">
             <section>
               Contraseña
               <input class="controls" type="password" id="password" value="" placeholder="Contraseña">
