--- a/src/server/website/listaPersona.html
+++ b/src/server/website/listaPersona.html
@@ -39,27 +39,14 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Identificación</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono 2</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Email</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Identificación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Telefono 2</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Correo Electrónico</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operación</th>
       </tr>
-      <!--
-      <tr class="linea" id="1">
-        <td>Erick</td>
-        <td>1123456</td>
-        <td>Nacional</td>
-        <td>71086099</td>
-        <td>88157623</td>
-        <td>correo@lineacaliente.es</td>
-        <td>
-            <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Erick',1123456,'Nacional',71086099,88157623,'correo@lineacaliente.es');">
-            <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
-        </td>
-      </tr>-->
       <tbody id="tableBody"></tbody>
     </table>
   </div>
