--- a/src/server/website/propVisible.html
+++ b/src/server/website/propVisible.html
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
       <p style="color:#FFFFFF; text-align: center;">
-        <b> Propiedades Visibles para Usuario</b><br>
+        <b>Propiedades de Usuario</b><br>
       </p>
     </section>
   </div>
@@ -31,8 +31,8 @@
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <section class="filt">
-      <input class="controls" type="text" id="user" value="" placeholder="Usuario">
-      <input class="buttons" type="submit" id="descBtn" value=" Filtrar Usuario " onclick="visibles();">
+      <input class="controls" type="text" id="user" value="" placeholder="Username de Usuario">
+      <input class="buttons" type="submit" id="descBtn" value="Mostrar propiedades" onclick="visibles();">
     </section>
   </div>
 
@@ -41,12 +41,12 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Uso</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Zona</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Área</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor fiscal</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha Registro</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Uso</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Zona</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Territorio</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor Fiscal</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Registro</th>
       </tr>           
       <tbody id="tableBody"></tbody>
     </table>
