--- a/src/server/website/consumoPropiedad_NoAdmin.html
+++ b/src/server/website/consumoPropiedad_NoAdmin.html
@@ -30,6 +30,14 @@
 <body style="background-color: #b4c5cd;">
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
+    <section class="filt">
+      <input class="buttons" type="submit" id="reconexCABtn" value="Órdenes de Conexión" onclick="reconexCA();">
+    </section>
+    <section class="filt" style="padding-left: 1em;">
+      <input class="buttons" type="submit" id="cortesCABtn" value="Órdenes de Corte" onclick="cortesCA();">
+    </section>
+  </div>
+  <div class="container-fluid" style="display: flex; justify-content: center;">
   </div>
   <br>
   <br>
@@ -37,7 +45,7 @@
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Movimiento</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Consumo</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Saldo</th>
       </tr> 
