--- a/src/server/website/propiedades_usuarioNoAdmin.html
+++ b/src/server/website/propiedades_usuarioNoAdmin.html
@@ -38,7 +38,7 @@
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Consumo <br> de Agua</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pagadas</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pendientes</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Plan de <br> Arreglo Pago</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Arreglos <br> de Pago</th>
       </tr>
       <tbody id="tableBody"></tbody>
     </table>
