--- a/src/server/website/planArregloPagoFormalizar_Admin.html
+++ b/src/server/website/planArregloPagoFormalizar_Admin.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/list.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <script src="js/planArregloPago_NoAdmin.js"></script>
+  <script src="js/planArregloPagoFormalizar_Admin.js"></script>
 </head>
 <header class="container-fluid">
   <div class="row align-items-center" style="background-color: #017bab;">
@@ -22,7 +22,7 @@
     </div>
     <section class="container-fluid" style="display: flex; justify-content: center;">
         <p style="color:#FFFFFF; text-align: center;">
-          <b>Arreglos de Pago</b><br>
+          <b>Solicitud de Plan de Arreglo de Pago</b><br>
         </p>
       </section>
   </div>
@@ -30,24 +30,39 @@
 <body style="background-color: #b4c5cd;">
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
-    <table id="tablaItems" style="border: 2px solid #017bab;">
+    <section class="filt">
+      <input class="buttons" type="submit" id="showPlanBtn" value="Formalizar Arreglo de Pago" onclick="cant();">
+    </section>
+  </div>
+  <br><br><br>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalles de Arreglo de Pago</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;">
+    <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Formalización <br> de Contrato</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Vencimiento <br> de Contrato</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Plazo <br> en Meses</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tasa de <br> Interés Anual</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto de <br> Deuda</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto de <br> Amortizacion</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto <br> Cancelado</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Saldo</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pendientes</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pendientes</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
       </tr> 
-      <tbody id="tableBody"></tbody>
+      <tbody id="tablePlansBody"></tbody>
     </table>
   </div>
-  <br>
-  <br>
+  <br><br><br><br><br><br>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;">
+    <table id="tableBills" style="border: 2px solid #017bab;">
+      <tr>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Vencimiento</th><!--tal vez hay que quitar-->
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
+      </tr> 
+      <tbody id="tableBillsBody"></tbody>
+    </table>
+  </div>
+  <br><br><br>
 </body>
 <footer class="container-fluid" style="background-color: #017bab;">
   <!-- Copyright -->
