--- a/src/server/website/planArregloPago_Admin.html
+++ b/src/server/website/planArregloPago_Admin.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/list.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <script src="js/facturas_propiedad_Admin.js"></script>
+  <script src="js/planArregloPago_Admin.js"></script>
 </head>
 <header class="container-fluid">
   <div class="row align-items-center" style="background-color: #017bab;">
@@ -30,12 +30,6 @@
 <body style="background-color: #b4c5cd;">
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
-    <section class="filt">
-      <input class="buttons" type="submit" id="showPlanBtn" value="Tramitar Arreglo de Pago" onclick="cant();">
-    </section>
-  </div>
-  <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;">
     <section >
       <b>Propiedad</b>
     </section>
@@ -43,33 +37,19 @@
       <input class="controls" type="text" id="propiedLote" value="" placeholder="Lote de Propiedad">
     </section>
     <section style="padding-left: 1em; text-align:center; vertical-align:middle;">
-      <input class="buttons" type="submit" id="showPlanBtn" value="Actualizar" onclick="cant();">
+      <input class="buttons" type="submit" id="showPlanBtn" value="Mostrar planes" onclick="cant();">
     </section>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Opciones de Plan</b><br><br></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Plazo en Meses</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tasa de Interés Anual</th><!--tal vez hay que quitar-->
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Cuota</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Detalles</th>
       </tr> 
       <tbody id="tablePlansBody"></tbody>
-    </table>
-  </div>
-  <br><br><br><br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas Pendientes</b><br><br></div>
-  <div class="container-fluid" style="display: flex; justify-content: center;">
-    <table id="tableBills" style="border: 2px solid #017bab;">
-      <tr>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Vencimiento</th><!--tal vez hay que quitar-->
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
-      </tr> 
-      <tbody id="tableBillsBody"></tbody>
     </table>
   </div>
   <br><br><br>
