solicitud AP webpage

--- a/src/server/website/planArregloPago_Admin.html
+++ b/src/server/website/planArregloPago_Admin.html
@@ -44,8 +44,8 @@
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Plazo en Meses</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tasa de Interés Anual</th><!--tal vez hay que quitar-->
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Plazo en <br> Meses</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tasa de <br> Interés Anual</th><!--tal vez hay que quitar-->
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Cuota</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Detalles</th>
       </tr> 
