solicitud arreglo pago

--- a/src/server/website/planArregloPago_Admin.html
+++ b/src/server/website/planArregloPago_Admin.html
@@ -53,6 +53,20 @@
     </table>
   </div>
   <br><br><br>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas</b><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;">
+    <table id="tableBills" style="border: 2px solid #017bab;">
+      <tr>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha de Vencimiento</th><!--tal vez hay que quitar-->
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
+      </tr> 
+      <tbody id="tableBillsBody"></tbody>
+    </table>
+  </div>
+  <br><br><br>
 </body>
 <footer class="container-fluid" style="background-color: #017bab;">
   <!-- Copyright -->
