--- a/src/server/website/planArregloPagoFormalizar_Admin.html
+++ b/src/server/website/planArregloPagoFormalizar_Admin.html
@@ -31,7 +31,7 @@
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <section class="filt">
-      <input class="buttons" type="submit" id="showPlanBtn" value="Formalizar Arreglo de Pago" onclick="cant();">
+      <input class="buttons" type="submit" id="showPlanBtn" value="Formalizar Arreglo de Pago" onclick="formalizar();">
     </section>
   </div>
   <br><br><br>
