--- a/src/server/website/facturas_pagadas_AP.html
+++ b/src/server/website/facturas_pagadas_AP.html
@@ -40,6 +40,7 @@
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Subtotal</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Morosidades</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Total</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Detalle</th>
       </tr> 
       <tbody id="tableBody"></tbody>
     </table>
