--- a/src/server/website/detalles_factura.html
+++ b/src/server/website/detalles_factura.html
@@ -29,7 +29,7 @@
 </header>
 <body style="background-color: #b4c5cd;">
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalles de Arreglo de Pago</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Factura</b><br><br></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
@@ -43,17 +43,17 @@
     </table>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalle</b><br><br></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tableBills" style="border: 2px solid #017bab;">
       <tr>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Concepto <br> de Cobro </th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Asosiacion</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Desasosiacion </th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Periodo</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Monto</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de <br> Concepto Cobro </th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto de<br> Concepto Cobro </th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Concepto <br> de Cobro</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Asociación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Desasociación</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Período de <br> Monto</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de <br> Monto</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de <br> Cobro</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto</th>
       </tr> 
       <tbody id="tableBillsBody"></tbody>
     </table>
