SP_Pago AP Condition Added + Portal Web Updated

--- a/src/server/website/planArregloPago_Admin.html
+++ b/src/server/website/planArregloPago_Admin.html
@@ -41,7 +41,7 @@
     </section>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Opciones disponibles</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Opciones disponibles<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
@@ -54,7 +54,7 @@
     </table>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tableBills" style="border: 2px solid #017bab;">
       <tr>
