--- a/src/server/website/planArregloPagoFormalizar_Admin.html
+++ b/src/server/website/planArregloPagoFormalizar_Admin.html
@@ -35,7 +35,7 @@
     </section>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalles de Arreglo de Pago</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalles de Arreglo de Pago<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
@@ -49,7 +49,7 @@
     </table>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Facturas<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tableBills" style="border: 2px solid #017bab;">
       <tr>
