--- a/src/server/website/planArregloPago_NoAdmin.html
+++ b/src/server/website/planArregloPago_NoAdmin.html
@@ -40,7 +40,7 @@
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto de <br> Amortizacion</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Monto <br> Cancelado</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Saldo</th>
-        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pendientes</th>
+        <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pagadas</th>
         <th style="text-align:center; vertical-align:middle; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Facturas <br> Pendientes</th>
       </tr> 
       <tbody id="tableBody"></tbody>
